refactor(trading): loadBalance 헬퍼를 tryLoadBalance/loadBalanceOrThrow로 분리
preview()와 execute()가 NO_CYCLE_HISTORY를 각각 정상 skip·무결성 오류로
반대 의미로 해석하던 구조를 헬퍼 시그니처로 책임을 명시해 분리.
테스트 전반 List.get(0) → getFirst() 정리.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>